--- a/manifest.json
+++ b/manifest.json
@@ -7,16 +7,15 @@
     "activeTab",
     "storage"
   ],
-  "host_permissions": [
-    "https://*.claude.ai/*"
-  ],
-  "action": {
-    "default_popup": "popup.html"
+  "host_permissions": [ "<all_urls>"],
+  "action": {},
+  "background": {
+    "service_worker": "background.js"
   },
   "content_scripts": [
     {
-      "matches": ["https://*.claude.ai/*"],
-      "js": ["content.js"]
+        "matches": ["<all_urls>"],
+        "js": ["content.js"]
     }
   ]
 }
